[gd_scene load_steps=13 format=2]

[ext_resource path="res://art_assets/players/Untitled89_20221028190640.png" type="Texture" id=1]
[ext_resource path="res://script/player.gd" type="Script" id=2]
[ext_resource path="res://art_assets/players/Untitled89_20221028190448.png" type="Texture" id=3]
[ext_resource path="res://art_assets/ui/flat/kenneyUI-blue.tres" type="Theme" id=4]
[ext_resource path="res://art_assets/players/Untitled89_20221028190627.png" type="Texture" id=5]
[ext_resource path="res://art_assets/players/Untitled89_20221028190452.png" type="Texture" id=6]
[ext_resource path="res://audio/sfx/walk.mp3" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41.5, 41.5 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 300, 300 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=20]
radius = 500.0

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 54.5, 47 )

[node name="player" type="KinematicBody2D"]
z_index = 10
script = ExtResource( 2 )

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="stun" type="Timer" parent="."]

[node name="camera" type="Camera2D" parent="."]
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = true

[node name="name" type="Label" parent="."]
margin_left = -54.0
margin_top = -77.0
margin_right = 17.0
margin_bottom = -55.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Player 1"
align = 1

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1.5, 3.5 )
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.90735e-06, 1 )
scale = Vector2( 0.375, 0.375 )
frames = SubResource( 23 )
animation = "walk"

[node name="area" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="area"]
position = Vector2( -1, 3 )
shape = SubResource( 20 )

[node name="hitbox" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0.5, -1 )
shape = SubResource( 22 )

[node name="progress" type="ProgressBar" parent="."]
visible = false
margin_left = -44.0
margin_top = -88.0
margin_right = 46.0
margin_bottom = -74.0
percent_visible = false

[node name="tween" type="Tween" parent="."]

[node name="muzzle" type="Position2D" parent="."]
position = Vector2( 0, -304 )

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
